[tool.poetry]
name = "brain-tumor-classification"
version = "0.0.1"
description = "A deep learning project to classify and segment brain tumors using transfer learning and gradCAM algorithm."
authors = ["Rishabh <2004rish@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
torch = "^2.5.1"
jupyter = "^1.1.1"
plotly = "^5.24.1"
ipywidgets = "^8.1.5"
torchvision = "^0.20.1"
pyqt6 = "^6.8.0"
opencv-python = "^4.11.0.86"
matplotlib = "^3.10.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
